prefs-dialog: Make sure locale changes do not lose search engine

Add a stock unstranslatable url to be stored in gsettings so that
locale changes do not confuse the settings dialog.

https://bugzilla.gnome.org/show_bug.cgi?id=741255